--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "converters/IGTD/IGTD"]
 	path = converters/IGTD/IGTD
 	url = https://github.com/zhuyitan/IGTD
+[submodule "converters/Deepinsight/Deepinsight"]
+	path = converters/Deepinsight/Deepinsight
+	url = https://github.com/alok-ai-lab/pyDeepInsight.git
